crates/au-cli/tests/it/snapshots/it__scenarios__multi-level-inheritance.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/multi-level-inheritance/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "multi-level-inheritance"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "multi-level-inheritance"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/multi-level-inheritance/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 154,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 131
            },
            "text": "A committed decision"
          },
          {
            "content": "decision.committed → decision → note",
            "kind": "inline_code",
            "span": {
              "end": 206,
              "line_col": {
                "end": {
                  "col": 52,
                  "line": 10
                },
                "start": {
                  "col": 10,
                  "line": 10
                }
              },
              "start": 164
            }
          },
          {
            "content": "description",
            "kind": "inline_code",
            "span": {
              "end": 238,
              "line_col": {
                "end": {
                  "col": 31,
                  "line": 11
                },
                "start": {
                  "col": 18,
                  "line": 11
                }
              },
              "start": 225
            }
          },
          {
            "content": "status",
            "kind": "inline_code",
            "span": {
              "end": 260,
              "line_col": {
                "end": {
                  "col": 53,
                  "line": 11
                },
                "start": {
                  "col": 45,
                  "line": 11
                }
              },
              "start": 252
            }
          },
          {
            "content": "committed_at",
            "kind": "inline_code",
            "span": {
              "end": 292,
              "line_col": {
                "end": {
                  "col": 85,
                  "line": 11
                },
                "start": {
                  "col": 71,
                  "line": 11
                }
              },
              "start": 278
            }
          }
        ],
        "claim": [
          "decision.committed"
        ],
        "closure": [
          "decision",
          "decision.committed",
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "committed_at",
            "origins": [
              {
                "name": "decision.committed",
                "origin_path": "<root>/scenarios/multi-level-inheritance/type/decision.committed.type.yaml",
                "required": true,
                "shape": "DateTime"
              }
            ],
            "required": true,
            "shape": "DateTime"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/multi-level-inheritance/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "status",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/multi-level-inheritance/type/decision.type.yaml",
                "required": true,
                "shape": "[pending, made, superseded]"
              }
            ],
            "required": true,
            "shape": "[pending, made, superseded]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 125,
                        "line_col": {
                          "end": {
                            "col": 33,
                            "line": 5
                          },
                          "start": {
                            "col": 15,
                            "line": 5
                          }
                        },
                        "start": 107
                      },
                      "file": "<root>/scenarios/multi-level-inheritance/sqlite-migration.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "2026-04-12T093000Z"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "2026-04-12T093000Z"
                }
              }
            ],
            "field": "committed_at"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 79,
                        "line_col": {
                          "end": {
                            "col": 51,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 42
                      },
                      "file": "<root>/scenarios/multi-level-inheritance/sqlite-migration.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate the dev database to SQLite."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate the dev database to SQLite."
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 92,
                        "line_col": {
                          "end": {
                            "col": 13,
                            "line": 4
                          },
                          "start": {
                            "col": 9,
                            "line": 4
                          }
                        },
                        "start": 88
                      },
                      "file": "<root>/scenarios/multi-level-inheritance/sqlite-migration.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "made"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "made"
                }
              }
            ],
            "field": "status"
          }
        ],
        "file": "<root>/scenarios/multi-level-inheritance/sqlite-migration.md",
        "section_presence": null
      }
    ]
  }
}
