crates/au-cli/tests/it/snapshots/it__scenarios__named-enum-brand.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 22,
                        "line_col": {
                          "end": {
                            "col": 23,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/named-enum-brand/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "named-enum-brand"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "named-enum-brand"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/named-enum-brand/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "command-meta"
        ],
        "closure": [
          "command-meta"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "icon",
            "origins": [
              {
                "name": "command-meta",
                "origin_path": "<root>/scenarios/named-enum-brand/type/command-meta.type.yaml",
                "required": true,
                "shape": "icon-role"
              }
            ],
            "required": true,
            "shape": "icon-role"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 33,
                        "line_col": {
                          "end": {
                            "col": 11,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 29
                      },
                      "file": "<root>/scenarios/named-enum-brand/command-save.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "save"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "save"
                }
              }
            ],
            "field": "icon"
          }
        ],
        "file": "<root>/scenarios/named-enum-brand/command-save.md",
        "section_presence": null
      }
    ]
  }
}
